# dynamix-c

./: CMakeLists.txt  README.md
code/dnmx/: CMakeLists.txt  alloc_util.h  api.h  domain.c  domain.h  message.h  mixin_id.h  mixin_type_info.c  mixin_type_info.h  obj.c  obj.h  obj_type.c  obj_type.h  obj_type_info.c  obj_type_info.h
code/dnmx/bits/: pp.h  preprocessor.h  sv.h
scratch/: CMakeLists.txt  scratch.c
test/: CMakeLists.txt  s-unity.h  t-alloc.c  t-bits-sv.c  t-domain-basics.c  w-unity.h
